# employee-management-authorization-with-permit-rbac

./: .env  app.py  models.py  pyproject.toml
instance/: company.db
migrations/versions/: 6e245ae7ccf5_.py
static/: styles.css
templates/: add_department.html  add_employee.html  base.html  department.html  employee.html  homepage.html  update_department.html  update_employee.html
